math/Rstudio/ERROR
c++: warning: argument unused during compilation: '-pie' [-Wunused-command-line-argument]                                                                      
/usr/ports/pobj/rstudio-1.1.444/rstudio-1.1.444/src/cpp/core/system/PosixSystem.cpp:680:37: error: no member named 'initialPath' in 'rstudio::core::FilePath'  
   FilePath initialPath = FilePath::initialPath();
                          ~~~~~~~~~~^
/usr/ports/pobj/rstudio-1.1.444/rstudio-1.1.444/src/cpp/core/system/PosixSystem.cpp:1082:20: error: use of undeclared identifier 'RLIMIT_AS'                   
         *pLimit = RLIMIT_AS;
                   ^
/usr/ports/pobj/rstudio-1.1.444/rstudio-1.1.444/src/cpp/core/system/PosixSystem.cpp:1104:20: error: use of undeclared identifier 'RLIMIT_NICE'                 
         *pLimit = RLIMIT_NICE;
                   ^
/usr/ports/pobj/rstudio-1.1.444/rstudio-1.1.444/src/cpp/core/system/PosixSystem.cpp:1176:19: error: variable has incomplete type 'struct sysinfo'              
   struct sysinfo info;
                  ^
/usr/ports/pobj/rstudio-1.1.444/rstudio-1.1.444/src/cpp/core/system/PosixSystem.cpp:1176:11: note: forward declaration of 'sysinfo'                            
   struct sysinfo info;
          ^
/usr/ports/pobj/rstudio-1.1.444/rstudio-1.1.444/src/cpp/core/system/PosixSystem.cpp:1177:10: error: no member named 'sysinfo' in the global namespace          
   if (::sysinfo(&info) == -1)
       ~~^
/usr/ports/pobj/rstudio-1.1.444/rstudio-1.1.444/src/cpp/core/system/PosixSystem.cpp:1180:51: error: use of undeclared identifier 'SI_LOAD_SHIFT'               
   pSysInfo->load1 = info.loads[0] / (float)(1 << SI_LOAD_SHIFT);
                                                  ^
/usr/ports/pobj/rstudio-1.1.444/rstudio-1.1.444/src/cpp/core/system/PosixSystem.cpp:1181:51: error: use of undeclared identifier 'SI_LOAD_SHIFT'               
   pSysInfo->load5 = info.loads[1] / (float)(1 << SI_LOAD_SHIFT);
                                                  ^
/usr/ports/pobj/rstudio-1.1.444/rstudio-1.1.444/src/cpp/core/system/PosixSystem.cpp:1182:52: error: use of undeclared identifier 'SI_LOAD_SHIFT'               
   pSysInfo->load15 = info.loads[2] / (float)(1 << SI_LOAD_SHIFT);
                                                   ^
/usr/ports/pobj/rstudio-1.1.444/rstudio-1.1.444/src/cpp/core/system/PosixSystem.cpp:1516:21: error: no member named 'prctl' in the global namespace            
   int dumpable = ::prctl(PR_GET_DUMPABLE, NULL, NULL, NULL, NULL);
                  ~~^
/usr/ports/pobj/rstudio-1.1.444/rstudio-1.1.444/src/cpp/core/system/PosixSystem.cpp:1516:27: error: use of undeclared identifier 'PR_GET_DUMPABLE'             
   int dumpable = ::prctl(PR_GET_DUMPABLE, NULL, NULL, NULL, NULL);
                          ^
10 errors generated.
ninja: build stopped: subcommand failed.
*** Error 1 in . (/usr/ports/devel/cmake/cmake.port.mk:31 'do-build': @cd /usr/ports/pobj/rstudio-1.1.444/build-amd64 && exec /usr/bin/env -...)               
*** Error 1 in . (/usr/ports/infrastructure/mk/bsd.port.mk:2738 '/usr/ports/pobj/rstudio-1.1.444/build-amd64/.build_done')                                     
*** Error 1 in /usr/ports/mystuff/math/Rstudio (/usr/ports/infrastructure/mk/bsd.port.mk:2419 'build')
